[gd_scene load_steps=4 format=3 uid="uid://brsmqtvugbox"]

[ext_resource type="Script" path="res://title_screen/TitleMenuOpt.gd" id="1"]
[ext_resource type="FontFile" path="res://fonts/PTSerifReg96.tres" id="2"]

[sub_resource type="Theme" id="2"]

[node name="TitleMenuOpt" type="Button"]
self_modulate = Color(1, 1, 1, 0)
offset_right = 907.0
offset_bottom = 995.0
size_flags_vertical = 3
theme = SubResource("2")
theme_override_fonts/font = ExtResource("2")
script = ExtResource("1")

[node name="Label" type="Label" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 22
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 96
text = "TMOpt"

[connection signal="focus_entered" from="." to="." method="_on_TitleMenuOpt_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_TitleMenuOpt_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_TitleMenuOpt_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_TitleMenuOpt_mouse_exited"]
